# piccolo

./: .gitignore  Makefile  README.md  Setup.hs  config.mk  piccolo.cabal  run.sh  runtests.sh
doc/specs/: Makefile  datarepr_specs.tex  new_try_output.txt  picompil_specs.tex
examples/: 100000tasks.pi  ackermann.pi  basics_input.pi  cs.pi  eratosthene.pi  fibonacci.pi  fibonacci_df.pi  fibonacci_par.pi  pingpong.pi  rec-counter.pi  test_env_sizes.pi
piccdbg/: demo.pi  piccdebug-curses.py  piccdebug.py
rts/: .gitignore  Makefile  atomic.c  atomic_impl.h  channel.h  channel_impl.h  commit.c  commit_impl.h  errors.h  errors_impl.h  piccolort.doxygen  pithread.h  pithread_impl.h  primitives.c  primitives.h  refcount.c  refcount_impl.h  scheduler.c  scheduler.h  tryaction.c  value_impl.h
runtime/: Makefile  channel.c  channel.h  commit.h  debug.c  debug.h  debug_impl.h  errors.c  gc2.c  gc2_impl.h  logger.c  logger_impl.h  pithread.c  pithread.h  primitives.c  primitives.h  queue.c  queue.h  queue_impl.h  refcount.c  refcount_impl.h  runtime.c  runtime.h  scheduler.c  scheduler_impl.h  tryaction.h  value.c  value.h  value_impl.h
src/: ASTRepr.hs  ASTRepr.ml  ASTUtils.ml  Backend.ml  CTests.ml  Errors.hs  FTests.ml  Main.hs  Makefile  Middleend.ml  ParseUtils.ml  PiccError.hs  PilLexer.mll  PilLexer.x  PilParser.mly  PilParser.y  PrettyPrinter.hs  Prim.ml  PrimitiveUtils.ml  Primitives.hs  Prims.ml  PrintUtils.ml  STests.ml  SeqAST.ml  SeqAST.mli  SeqASTConst.ml  SeqASTConst.mli  SeqASTConstC.ml  SeqASTConstGen.ml  SeqASTConstUtil.ml  SeqASTPrettyPrinter.ml  SeqASTPrettyPrinter.mli  SeqASTPrettyPrinterC.ml  SeqASTPrettyPrinterGen.ml  SeqASTconst.ml  Settings.ml  Syntax.ml  TTests.ml  TypeRepr.ml  Types.ml  (+4 more)
src/Back/: Backend.hs  CBackend.hs  CodeEmitter.hs  GenericBackend.hs  RTOptions.hs  SeqAST.hs  SeqASTUtils.hs
src/Backend/: CBackend.hs  CCompiler.hs  Codegen.hs  SeqAST.hs  SeqASTUtils.hs
src/Core/: AST.hs  ASTUtils.hs  Compilation.hs  DebugSymbols.hs  Environments.hs  Parser.hs  Typecheck.hs
src/Front/: AST.hs  ASTUtils.hs  Parser.hs  PilLexer.x  PilParser.y
src/Middle/: Compilation.hs  Environments.hs  IndexesComputations.hs  Typing.hs
src/Piccolo/: AST.hs  CBackend.hs  CCompiler.hs  Codegen.hs  Compilation.hs  Environments.hs  Errors.hs  Output.hs  Parser.hs  Primitives.hs  SeqAST.hs  SeqASTUtils.hs  Typecheck.hs
src/Utils/: CodeEmitter.hs  Location.hs  PilPPrinter.hs
test/: 100000tasks.pi  Makefile  TODO  ackermann.pi  basics_call.pi  basics_let.pi  basics_safe_choice.pi  basics_unsafe_choice.pi  cs.pi  eratosthene.pi  hello.pi  mktest.sh  pingpong.pi  pingpong_gc.pi  rec_counter.pi  runtest.py  runtest.sh  truefalse.pi  valgrind.supp
test/Test001/: Test001.pi
test/Test002/: Test002.pi
test/Test003/: Test003.pi
test/Test004/: Test004.pi
test/Test005/: Test005.pi
test/Test006/: Test006.pi
test/Test007/: Test007.pi
test/Test008/: Test008.pi
test/Test009/: Test009.pi
test/Test010/: Test010.pi
test/Test011/: Test011.pi
test/Test012/: Test012.pi
test/Test013/: Test013.pi
test/Test014/: Test014.pi
test/Test015/: Test015.pi
test/Test016/: Test016.pi
test/Test017/: Test017.pi
test/Test018/: Test018.pi
test/Test019/: Test019.pi
test/Test020/: Test020.pi
test/Test021/: Test021.pi
test/basic001/: basic001.pi  run
test/basic002/: basic002.pi  run
test/basic003/: basic003.pi  run
test/basic004/: basic004.pi  run
test/basic005/: basic005.pi  run
test/choice001/: choice001.pi  run
test/hochan001/: hochan001.pi  run
test/hochan002/: hochan002.pi  run
test/lexprs001/: lexprs001.pi  run
test/lexprs002/: lexprs002.pi  run
test/lexprs003/: lexprs003.pi  run
test/string001/: run  string001.pi
test/string002/: run  string002.pi
test/string003/: run  string003.pi
test/string004/: run  string004.pi
tests/: Fibonacci.pth  FibonacciDF.pth  Makefile  PingPong.pth  ackermann.pi  ackermann.pth  basics_input.pi  basics_output.pi  basics_prim.pi  basics_prim.run  basics_spawn.pi  basics_synchro.pi  basics_synchro_plus.pi  choices.pi  choices.pth  cleandebug.sh  cs.pi  debug.sh  eratosthene.pi  eratosthene.pth  fibonacci.pi  hello.pi  pingpong.pth  pingpong_gc.pth  pingpong_gc2.pi  primtest.pth  simplest.pi  spingpong.pi  truefalse.pi
tests/basics/: call.pi  input.pi  let.pi  output.pi  (+4 more)
(+6 files in other folders)
