Name:                piccolo
Version:             0.1.0.0
License:             GPL-3
License-file:        LICENSE
Author:              me@adeharbe.org, frederic.peschanski@lip6.fr
Maintainer:          me@adeharbe.org
Homepage:            http://github.com/piccolo-lang/piccolo/

Stability:           Beta
Category:            Compilers, Language
Synopsis:            TODO
Description:         TODO

Cabal-version:       >=1.8
Build-type:          Custom

Extra-source-files:  Makefile
                     rts/*.h
                     rts/*.c

Executable piccolo
  Main-is:             Main.hs
  Hs-source-dirs:      src
  Build-depends:       base
                     , array
                     , mtl >= 2.2.1
                     , containers
                     , filepath
                     , parsec
                     , process
  Ghc-options:         -Wall
